# virtual-yoga-instructor

./: .gitignore  MODEL_CARD.md  Makefile  PAPER_SPEC.md  README.md  RECONSTRUCTION.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
reports/: SOURCE_RUN.txt
reports/latest/: config.yaml  data_manifest.json  environment.json  metrics.json  predictions.parquet  statistical_tests.json
src/yogacoach/: artifacts.py  core.py  run.py
tests/: test_core.py
