[project]
      name = "virtual-yoga-instructor"
      version = "1.0.0"
      description = "MediaPipe-compatible eight-angle yoga feedback engine with TCP/JSON integration."
      requires-python = ">=3.12,<3.13"
      dependencies = [
        "matplotlib>=3.9",
"numpy>=2.0",
"pandas>=2.2",
"pyarrow>=17",
      ]

      [dependency-groups]
      dev = ["pytest>=8.3", "ruff>=0.9"]

      [tool.pytest.ini_options]
      pythonpath = ["src"]
      testpaths = ["tests"]

      [tool.ruff]
      line-length = 100
      target-version = "py312"
